app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

body {
  font-family: helvetica;
  background-color: #ededed
 }

ul {
  padding-left: 0;
  list-style: none;
  color: green;
  font-weight: bold;
}

#nonogram {
  border-collapse: collapse;
  border-width: 1px;
  border-style: solid;
}

.column-clue {
  background-color: #f2f2f2;
  border-left: 1px solid black;
  border-right: 1px solid black;
}

.row-clue {
  background-color: #f2f2f2;
  border-top: 1px solid black;
  border-bottom: 1px solid black;
}

.cell {
  border: 1px solid #666666;
  width: 20px;
  height: 20px;
}

.blank {
  background-color: white;
  border
}

.filled {
  background-color: black;
}

.crossed {
  background-color: #cccccc;
}

.pad-out {
  padding: 10px;
}

.alert {
  color: red;
  text-align: center;
}

.alert-success {
  color: green;
}

.page-container {
  text-align: center;
  margin: 10px;
  padding: 15px 30px;
  -o-text-overflow: ellipsis;
  text-overflow: ellipsis;
}

.page-content {
  display: inline-block;
  padding: 15px 30px;
  border: 2px solid;
  border-radius: 8px;
  min-width: 50%;
  background-color: white;
}

